# dslr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  constants.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
datasets/: dataset_dummy.csv  dataset_wrong_format.csv
dslr/: describe.py  histogram.py  models.py  pair_plot.py  scatter_plot.py  stats.py  utils.py
dslr/data_viz/: histogram.py  scatter_plot.py
dslr/models/: dataset.py  regression.py
tests/: test_describe.py  test_models.py  test_utils.py
