[tool.poetry]
name = "dslr"
version = "0.1.0"
description = "42 AI : Logistic Regression Project"
authors = ["Alhuin <jjanin-r@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pandas = "^1.3.4"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
