[tool.poetry]
name = "dslr"
version = "0.1.0"
description = "42 AI : Logistic Regression Project"
authors = ["Alhuin <jjanin-r@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
pandas = "^1.3.4"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"
black = "^21.11b1"
tox = "^3.24.4"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.2"}
pylint = "^2.12.1"
coverage = "^6.1.2"
tox-gh-actions = "^2.8.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
docstring-min-length=10
max-line-length = 120
disable = "C0114"
